syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AlertConditionDescriptorOneOfProto";

import "sdc/biceps/alertconditiondescriptor.proto";
import "sdc/biceps/limitalertconditiondescriptor.proto";

message AlertConditionDescriptorOneOfMsg {
  oneof alert_condition_descriptor_one_of {
    AlertConditionDescriptorMsg alert_condition_descriptor = 1;
    LimitAlertConditionDescriptorMsg limit_alert_condition_descriptor = 2;
  }
}
